random-constructible-derive/tests/ui/05-env-fail.stderr
error[E0277]: the trait bound `Env: RandConstructProbabilityMapProvider<MagicItem>` is not satisfied
  --> tests/ui/05-env-fail.rs:50:17
   |
50 |         let x = Env::create_random::<MagicItem>();
   |                 ^^^ the trait `RandConstructProbabilityMapProvider<MagicItem>` is not implemented for `Env`
   |
   = help: the trait `RandConstructProbabilityMapProvider<ProbabilityEnum>` is implemented for `Env`
   = help: for that trait implementation, expected `ProbabilityEnum`, found `MagicItem`
note: required by a bound in `create_random`
  --> $CARGO/random-constructible-0.4.0/src/lib.rs
   |
   |     fn create_random<R>() -> R
   |        ------------- required by a bound in this associated function
...
   |         Self: RandConstructProbabilityMapProvider<R> + Sized,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RandConstructEnvironment::create_random`

error[E0277]: the trait bound `Env: RandConstructProbabilityMapProvider<MagicItem>` is not satisfied
  --> tests/ui/05-env-fail.rs:51:17
   |
51 |         let y = Env::create_random_uniform::<MagicItem>();
   |                 ^^^ the trait `RandConstructProbabilityMapProvider<MagicItem>` is not implemented for `Env`
   |
   = help: the trait `RandConstructProbabilityMapProvider<ProbabilityEnum>` is implemented for `Env`
   = help: for that trait implementation, expected `ProbabilityEnum`, found `MagicItem`
note: required by a bound in `create_random_uniform`
  --> $CARGO/random-constructible-0.4.0/src/lib.rs
   |
   |     fn create_random_uniform<R>() -> R
   |        --------------------- required by a bound in this associated function
...
   |         Self: RandConstructProbabilityMapProvider<R> + Sized,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RandConstructEnvironment::create_random_uniform`
